  * Namespaces on the root node are automatically registered
  * CSS queries use the default namespace
  * XML::Document#encoding get encoding used for this document
  * XML::Document#url get the document url
  * XML::Node#each iterate over attribute name, value pairs
  * XML::Node#keys get all attribute names
  * XML::Node#line get the line number for a node (Thanks Dirkjan Bussink!)
  * XML::Node#to_html, to_xml, and to_xhtml take an optional encoding
  * XML::Node#to_str
  * XML::Node#to_xhtml to produce XHTML documents
  * XML::Node#values get all attribute values
  * XML::ProcessingInstrunction.new
  * XML::SAX::PushParser for all your push parsing needs.

* Bugfixes

  * Fixed XML::Document#dup
  * Fixed header detection. Thanks rubikitch!
  * Fixed a problem where invalid CSS would cause the parser to hang

* Deprecations

  * Nokogiri::XML::Node.new_from_str will be deprecated in 1.3.0 or March 1

* API Changes

  * Nokogiri::HTML.fragment now returns an XML::DocumentFragment (LH #32)

=== 1.1.1

* New features

  * Added XML::Node#elem?
  * Added XML::Node#attribute_nodes
  * Added XML::Attr
  * XML::Node#delete added.
  * XML::NodeSet#inner_html added.

* Bugfixes

  * Not including an HTML entity for \r for HTML nodes.
  * Removed CSS::SelectorHandler and XML::XPathHandler
  * XML::Node#attributes returns an Attr node for the value.
  * XML::NodeSet implements to_xml

=== 1.1.0

* New Features

  * Custom XPath functions are now supported.  See Nokogiri::XML::Node#xpath
  * Custom CSS pseudo classes are now supported.  See Nokogiri::XML::Node#css
  * Nokogiri::XML::Node#<< will add a child to the current node

* Bugfixes

  * Mutex lock on CSS cache access
  * Fixed build problems with GCC 3.3.5
  * XML::Node#to_xml now takes an indentation argument
  * XML::Node#dup takes an optional depth argument
  * XML::Node#add_previous_sibling returns new sibling node.

=== 1.0.7

* Bugfixes

  * Fixed memory leak when using Dike