@@ -1,3 +1,4 @@
 module Nokogiri
+  # The version of Nokogiri you are using
   VERSION = '1.1.1'
 end
